syntax = "proto3";

package carota.cmh;

import "Telemetry.proto";

option java_package = "com.carota.protobuf";


/*
* Path : /getfield
* Feature :
*   1. Get Field info MDA -> TBOX
*/
message FieldPayload {
    enum Type {
        ERROR = 0;
        LONG = 1;
        STRING = 2;
    }
    string name = 1;
    Type type = 2;
    int64 valLong = 3;
    string valStr = 4;
}

message QueryFieldReq {
    string tag = 1;
    int32 group = 2;
}

message QueryFieldRsp {
    repeated carota.telemetry.CallTrace trace = 1;
    int32 group = 2;
    string track = 3;
    repeated FieldPayload value = 4;
}

/*
* Path : /setfield
* Feature :
*   1. Set Field info MAD -> TBOX
*/
message SetFieldReq {
    string tag = 1;
    int32 group = 2;
    string track = 3;
    repeated FieldPayload value = 4;
}
